--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -1,26 +1,9 @@
-# Configuration of Hugo
-# Guide: https://docs.hugoblox.com/tutorial/
-# Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
-# This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
-
-# Website name
-title: Hugo Academic CV Theme
-# Website URL
-baseURL: 'https://example.com/'
-
-############################
-## LANGUAGE
-############################
-
+title: Anton Matsson
+baseURL: https://example.com/
 defaultContentLanguage: en
 hasCJKLanguage: false
 defaultContentLanguageInSubdir: false
 removePathAccents: true
-
-############################
-## ADVANCED
-############################
-
 build:
   writeStats: true
 enableGitInfo: false
@@ -32,7 +15,7 @@ enableRobotsTXT: true
 footnotereturnlinkcontents: <sup>^</sup>
 ignoreFiles: [\.ipynb$, .ipynb_checkpoints$, \.Rmd$, \.Rmarkdown$, _cache$]
 permalinks:
-  authors: '/author/:slug/'
+  authors: /author/:slug/
 disableAliases: true
 outputs:
   home: [HTML, RSS, headers, redirects, backlinks]
